0029645: Hang on making pipe shell using BRepOffsetAPI_MakePipeShell

Added new boolean parameter to GeomLib::FuseIntervals() to select method of defining an element with close values